# Federated-Networks-vs.-Trees

./: .gitmodules  README.md  pyproject.toml
data/heart_disease/: heart.csv
data/lumpy_skin/: lumpy_skin.csv
src/benchmark/: client.py  constants.py  dataset.py  dataset_preparation.py  main.py  model.py  server.py  strategy.py  utils.py
src/benchmark/conf/: base.yaml
src/benchmark/models/: mlp.py  resnet.py
